<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contacts"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/action_contacts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/action_map"
        app:showAsAction="ifRoom" />
</menu>