<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/purple_500"
        android:padding="10dp"
        android:text="@string/settings_text"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/list_type_text"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RadioButton
            android:id="@+id/popular_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_popular" />

        <RadioButton
            android:id="@+id/top_rated_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_top_rated" />

        <RadioButton
            android:id="@+id/upcoming_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_upcoming" />

        <RadioButton
            android:id="@+id/now_playing_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_now_playing" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/apply" />

</androidx.appcompat.widget.LinearLayoutCompat>